<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:background="#ff404040"
        />
    
    <!-- TODO: rewrite UI to be more like WiFi Advanced App:
         - non-editable SSID; click to bring up edit box.
         - labels left-aliged, value right-aligned.
         - less white/light gray UI items
         - fix scrolling issues in landscape -->
    
    <TextView
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="#000"
        android:background="#ddd"
        android:text="@string/local" />
    <CheckBox 
        android:id="@+id/local_enable"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:checked="true"
		android:enabled="false"
        android:text="@string/enable" />
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:shrinkColumns="0" >
	    <TableRow
	        android:layout_width="fill_parent" >
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
	        	android:text="@string/ssid" />
		    <EditText
		        android:id="@+id/local_ssid"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:inputType="text"
		        android:editable="true"
		        android:enabled="false"
		        android:text=""/>
	    </TableRow>
	    <TableRow>
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
	        	android:text="@string/security" />
		    <Spinner
		        android:id="@+id/local_security"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:entries="@array/security_types"
		        android:enabled="false"
		        />
	    </TableRow>
	    <TableRow>
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/passphrase" />
	        <EditText
	            android:id="@+id/local_passphrase"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:inputType="textPassword"
		        android:editable="true"
		        android:enabled="false"
	            android:text="" />
	    </TableRow>
    </TableLayout>
    <Button 
        android:id="@+id/local_update"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:enabled="false"
        android:text="@string/update"/>
    
    <TextView
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="#000"
        android:background="#ddd"
        android:text="@string/client" />
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:shrinkColumns="0" >
	    <TableRow
	        android:layout_width="fill_parent" >
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
	        	android:text="@string/ssid" />
		    <EditText
		        android:id="@+id/client_ssid"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:inputType="text"
		        android:editable="true"
		        android:enabled="false"
		        android:text=""/>
	    </TableRow>
	    <TableRow>
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
	        	android:text="@string/security" />
		    <Spinner
		        android:id="@+id/client_security"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:entries="@array/security_types"
		        android:enabled="false"
		        />
	    </TableRow>
	    <TableRow>
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/passphrase" />
	        <EditText
	            android:id="@+id/client_passphrase"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:inputType="textPassword"
		        android:editable="true"
		        android:enabled="false"
	            android:text="" />
	    </TableRow>
    </TableLayout>
    <Button 
		android:id="@+id/client_update"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:enabled="false"
		android:text="@string/update"/>

</LinearLayout>